# TnyTreeSitter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tny.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tny/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTny/: tny.h
bindings/swift/TreeSitterTnyTests/: TreeSitterTnyTests.swift
queries/: highlights.scm  indents.scm  injections.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
